--- a/views/pmdresult_compare_bs.pug
+++ b/views/pmdresult_compare_bs.pug
@@ -18,18 +18,21 @@ block content
 
             table(class='pmd1 table-bordered table-striped table-curved')
                 tbody
-                    tr
-                        td IIM value
-                        td=compdataset.iimvalue
-                    tr
-                        td XMP value
-                        td=compdataset.xmpvalue
-                    tr
-                        td Exif value
-                        td=compdataset.exifvalue
-                    tr
-                        td Note
-                        td=compdataset.note
+                    - var testiim = compdataset.iimvalue != "NA";
+                    if testiim
+                        tr
+                            td IIM value
+                            td=compdataset.iimvalue
+                    - var testxmp = compdataset.xmpvalue != "NA";
+                    if testxmp
+                        tr
+                            td XMP value
+                            td=compdataset.xmpvalue
+                    - var testexif = compdataset.exifvalue != "NA";
+                    if testexif
+                        tr
+                            td Exif value
+                            td=compdataset.exifvalue
 
 
         div(class="row topspace2")
