--- a/views/pmdresult_stds_bs.pug
+++ b/views/pmdresult_stds_bs.pug
@@ -6,6 +6,8 @@ block content
         div(class="row")
             div(class="col-md-6") ... as retrieved from the image file: <strong>#{imageTitle}</strong>
         div(class="row")
+            div(class="col-md-6") <img src="#{imgwsfpath}" width="300">
+        div(class="row")
             div(class="col-md-6") The tables below show the IPTC Field Names in alphabetical order.<br>How the fields should be filled in explains the <a href='https://www.iptc.org/std/photometadata/documentation/userguide' target='_blank'>IPTC Photo Metadata User Guide</a>
         div(class="row topspace1")
             div(class="col-md-6") <a href="/">Back to Request Form</a>
