user interface modified

--- a/views/pmdresult_compare_bs.pug
+++ b/views/pmdresult_compare_bs.pug
@@ -8,7 +8,7 @@ block content
         div(class="row")
             div(class="col-md-6") <img src="#{imgwsfpath}" width="300">
         div(class="row topspace2")
-            div(class="col-md-6") The tables below show all IPTC Photo Metadata fields which may have values in at least the IIM and XMP format, optionally also a related Exif value may exist. The values of these fields should be identical across the formats. Therefore please check if this is the case, a note helps.<br />The IPTC Photo Metadata User Guide provides an insight how metadata values exist in different formats, see <a href="https://www.iptc.org/std/photometadata/documentation/userguide/#!Documents/photometadataunderthehood.htm" target="_blank">Introduction -- Photo Metadata - Under the Hood</a>.
+            div(class="col-md-6") The tables below show IPTC fields where values may be embedded in different formats, usually IIM and XMP and sometimes also EXIF. Values should be identical (synchronised by software) across these formats. Go to <a href="https://www.iptc.org/std/photometadata/documentation/userguide/#!Documents/photometadataunderthehood.htm" target="_blank">Introduction -- Photo Metadata - Under the Hood</a> for more information about metadata processing and synching.
         div(class="row topspace1")
             div(class="col-md-6") <a href="/">Back to Request Form</a>
 
