--- a/views/appversion.pug
+++ b/views/appversion.pug
@@ -1,5 +1,6 @@
-extends layout
+extends layout_bs
 
 block content
-  h2 System Version
-  p= theappversion
+  div(class='container')
+    h2 System Version
+    p= theappversion
