--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,7 @@
-extends layout
+extends layout_bs
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  div(class='container')
+    h1= message
+    h2= error.status
+    pre #{error.stack}
