--- a/views/pmdresult_compare_bs.pug
+++ b/views/pmdresult_compare_bs.pug
@@ -10,7 +10,10 @@ block content
         div(class="row topspace2")
             div(class="col-md-6") The tables below show IPTC fields where values may be embedded in different formats, usually IIM and XMP and sometimes also EXIF. Values should be identical (synchronised by software) across these formats. Go to <a href="https://www.iptc.org/std/photometadata/documentation/userguide/#!Documents/photometadataunderthehood.htm" target="_blank">Introduction -- Photo Metadata - Under the Hood</a> for more information about metadata processing and synching.<br /><strong>To make invisible characters like spaces visible the values are shown in curled brackets {} - they are not a part of the value!</strong>
         div(class="row topspace1")
-            div(class="col-md-6") <a href="/">Back to Request Form</a>
+            - var ilfnstds = '/getpmd/html/stds/?imglfn=' + imglfn + '||' + imageTitle;
+            - var ilfntopics = '/getpmd/html/topics/?imglfn=' + imglfn + '||' + imageTitle;
+            div(class="col-md-6") <a href="/">Back to Request Form</a> || <a href="#{ilfnstds}">See grouped by technical standards</a> || <a href="#{ilfntopics}">See grouped by metadata topics</a>
+
 
         h2 Compared Photo Metadata Fields
 
@@ -43,4 +46,7 @@ block content
 
 
         div(class="row topspace2")
-            div(class="col-md-6") <a href="/">Back to Request Form</a>
+            - var ilfnstds = '/getpmd/html/stds/?imglfn=' + imglfn + '||' + imageTitle;
+            - var ilfntopics = '/getpmd/html/topics/?imglfn=' + imglfn + '||' + imageTitle;
+            div(class="col-md-6") <a href="/">Back to Request Form</a> || <a href="#{ilfnstds}">See grouped by technical standards</a> || <a href="#{ilfntopics}">See grouped by metadata topics</a>
+
