--- a/views/pmdresult_stds_bs.pug
+++ b/views/pmdresult_stds_bs.pug
@@ -8,9 +8,11 @@ block content
         div(class="row")
             div(class="col-md-6") <img src="#{imgwsfpath}" width="300">
         div(class="row")
-            div(class="col-md-6") The tables below show the IPTC Field Names in alphabetical order.<br>Go to the <a href='https://www.iptc.org/std/photometadata/documentation/userguide' target='_blank'>IPTC Photo Metadata User Guide</a> for information about the fields and how to use them.
+            div(class="col-md-6 topspace2") The tables below show the IPTC Field Names in alphabetical order.<br>Go to the <a href='https://www.iptc.org/std/photometadata/documentation/userguide' target='_blank'>IPTC Photo Metadata User Guide</a> for information about the fields and how to use them.
         div(class="row topspace1")
-            div(class="col-md-6") <a href="/">Back to Request Form</a>
+            - var ilfntopics = '/getpmd/html/topics/?imglfn=' + imglfn + '||' + imageTitle;
+            - var ilfncompare = '/getpmd/html/compare/?imglfn=' + imglfn + '||' + imageTitle;
+            div(class="col-md-6") <a href="/">Back to Request Form</a> || <a href="#{ilfntopics}">See grouped by metadata topics</a> || <a href="#{ilfncompare}">See compared fields</a>
 
         h2 IIM - IPTC Photo Metadata Fields
         table(class='pmd1 table-bordered table-striped table-curved')
@@ -82,5 +84,7 @@ block content
 
 
         div(class="row topspace2")
-            div(class="col-md-6") <a href="/">Back to Request Form</a>
+            - var ilfntopics = '/getpmd/html/topics/?imglfn=' + imglfn + '||' + imageTitle;
+            - var ilfncompare = '/getpmd/html/compare/?imglfn=' + imglfn + '||' + imageTitle;
+            div(class="col-md-6") <a href="/">Back to Request Form</a> || <a href="#{ilfntopics}">See grouped by metadata topics</a> || <a href="#{ilfncompare}">See compared fields</a>
 
