--- a/views/pmdresult_topics_bs.pug
+++ b/views/pmdresult_topics_bs.pug
@@ -33,6 +33,8 @@ block content
             div(class="col-md-6") ... as retrieved from the image file: <strong>#{imageTitle}</strong>
         div(class="row")
             div(class="col-md-6") <img src="#{imgwsfpath}" width="300">
+        div(class="row")
+            div(class="col-md-6 techmdbox") width:#{techMd.width} height:#{techMd.height} colorspace:#{techMd.colorspace} compression:#{techMd.compression}
         div(class="row topspace2")
             div(class="col-md-8") The tables below show the IPTC Field Names in alphabetical order.<br>The grouping of fields is the same as in the <a href='https://www.iptc.org/std/photometadata/documentation/userguide/#!Documents/howtoeditmetadatafor1.htm' target='_blank'>IPTC Photo Metadata User Guide</a> - click on the headings of the sections.
         div(class="row topspace1")
