--- a/views/pmdresult_compare_bs.pug
+++ b/views/pmdresult_compare_bs.pug
@@ -14,7 +14,8 @@ block content
         div(class="row topspace1")
             - var ilfnstds = '/getpmd/html/stds/?imglfn=' + imglfn + '||' + imageTitle;
             - var ilfntopics = '/getpmd/html/topics/?imglfn=' + imglfn + '||' + imageTitle;
-            div(class="col-md-6") <a href="/">Back to Request Form</a> || <a href="#{ilfnstds}">See grouped by technical standards</a> || <a href="#{ilfntopics}">See grouped by metadata topics</a>
+            div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px;margin-left: 10px;"><a href="#{ilfnstds}">See grouped by technical standards</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfntopics}">See grouped by metadata topics</a></span>
+
 
 
         h2 Compared Photo Metadata Fields
@@ -50,5 +51,6 @@ block content
         div(class="row topspace2")
             - var ilfnstds = '/getpmd/html/stds/?imglfn=' + imglfn + '||' + imageTitle;
             - var ilfntopics = '/getpmd/html/topics/?imglfn=' + imglfn + '||' + imageTitle;
-            div(class="col-md-6") <a href="/">Back to Request Form</a> || <a href="#{ilfnstds}">See grouped by technical standards</a> || <a href="#{ilfntopics}">See grouped by metadata topics</a>
+            div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px;margin-left: 10px;"><a href="#{ilfnstds}">See grouped by technical standards</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfntopics}">See grouped by metadata topics</a></span>
+
 
