--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,9 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style_wbs.css')
   body
-    h2(style='color:#cc3300; text-align: center;') This is an experimental site
+    div(class='container')
+      h5(style='color:#cc6600;') This site is in a development/test state
+
     block content
 
     footer(class='footer topspace2')
