--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style_wbs.css')
   body
     div(class='container')
-      h5(style='color:#cc6600;') This site is in a development/test state
+      h5(style='color:#cc6600;') This is a test site of the <a href="https://github.com/nitmws/get-iptc-pmd">get-iptc-pmd project on Github</a>
 
     block content
 
