Back to Request Form added

--- a/views/checkedpage.pug
+++ b/views/checkedpage.pug
@@ -16,3 +16,6 @@ block content
             each imageurl in imageurls
                 - var getpmdurl =  '/getpmd/html/topics/?imgurl=' + imageurl;
                 li <a href="#{getpmdurl}">#{imageurl}</a>
+
+        div(class="row topspace2")
+            div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span>
