--- a/views/pmdresult_stds.pug
+++ b/views/pmdresult_stds.pug
@@ -11,7 +11,7 @@ block content
            else
               div(class="col-md-6") <img src="#{imgurl}" width="300">
         div(class="row")
-            div(class="col-md-6 techmdbox") original size:#{techMd.width}x#{techMd.height} colorspace:#{techMd.colorspace} compression:#{techMd.compression}
+            div(class="col-md-6 techmdbox") original size:#{techMd.width}x#{techMd.height}, colorspace:#{techMd.colorspace}, compression:#{techMd.compression}
         div(class="row")
             div(class="col-md-6 topspace2") The tables below show the IPTC Field Names in alphabetical order.<br>Go to the <a href='https://www.iptc.org/std/photometadata/documentation/userguide' target='_blank'>IPTC Photo Metadata User Guide</a> for information about the fields and how to use them.
         div(class="row topspace1")
