--- a/views/checkedpage.pug
+++ b/views/checkedpage.pug
@@ -3,6 +3,8 @@ extends layout
 block content
     div(class='container')
         div(class="row")
+            div(class="col-md-1")
+                <img src="/images/logo.jpg"/>
             div(class="col-md-8")
                 h1(class="checkpagebox1") Image URLs in a Web Page
         div(class="row")
