--- a/views/pmdresult_compare.pug
+++ b/views/pmdresult_compare.pug
@@ -2,6 +2,8 @@ extends layout
 
 block content
     div(class='container')
+        div(class="col-md-1")
+            <img src="/images/logo.jpg"/>
         h1 Get IPTC Photo Metadata and Compare
         div(class="row")
             div(class="col-md-6") ... as retrieved from the image file: <strong>#{imageTitle}</strong>
