--- a/views/pmdresult_topics.pug
+++ b/views/pmdresult_topics.pug
@@ -28,6 +28,8 @@ mixin tablerows(rowL1)
 
 block content
     div(class='container')
+        div(class="col-md-1")
+            <img src="/images/logo.jpg"/>
         h1 Get IPTC Photo Metadata
         div(class="row")
             div(class="col-md-6") ... as retrieved from the image file: <strong>#{imageTitle}</strong>
