--- a/views/pmdresult_stds.pug
+++ b/views/pmdresult_stds.pug
@@ -15,7 +15,7 @@ block content
         div(class="row")
             div(class="col-md-6 techmdbox") original size:#{techMd.width}x#{techMd.height}, colorspace:#{techMd.colorspace}, compression:#{techMd.compression}
         div(class="row")
-            div(class="col-md-6 topspace2") The tables below show the IPTC Field Names in alphabetical order.<br>Go to the <a href='https://www.iptc.org/std/photometadata/documentation/userguide' target='_blank'>IPTC Photo Metadata User Guide</a> for information about the fields and how to use them.
+            div(class="col-md-6 topspace2") The tables below show the IPTC Field Names in alphabetical order.<br>For fields with multiple values they are separated by a comma.<br>Go to the <a href='https://www.iptc.org/std/photometadata/documentation/userguide' target='_blank'>IPTC Photo Metadata User Guide</a> for information about the fields and how to use them.
         div(class="row topspace1")
             - var ilfntopics = '/getpmd/html/topics/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
             - var ilfncompare = '/getpmd/html/compare/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
