--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,16 +10,16 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style_wbs.css')
   body
-    div(class='container')
+    div(class='container getpmdtop1')
       h5(style='color:#cc6600;') This is a test site of the <a href="https://github.com/nitmws/get-iptc-pmd">get-iptc-pmd project on Github</a>
 
-    block content
+      block content
 
-    footer(class='footer topspace2')
-      div(class='container')
-        div(class="row")
-          div(class="col-md-6") Retrieval of embedded metadata by Phil Harvey's&nbsp;
-            a(href='http://owl.phy.queensu.ca/~phil/exiftool/', target='_blank') ExifTool
-        div(class="row")
-          div(class="col-md-6") This is a free service by&nbsp;
-            a(href='http://www.newsit.biz', target='_blank') NewsIT-M.W.Steidl
+      footer(class='footer topspace2 getpmdfooter1')
+        div(class='container')
+          div(class="row")
+            div(class="col-md-6") Retrieval of embedded metadata by Phil Harvey's&nbsp;
+              a(href='http://owl.phy.queensu.ca/~phil/exiftool/', target='_blank') ExifTool
+          div(class="row")
+            div(class="col-md-6") This is a free service by&nbsp;
+              a(href='http://www.newsit.biz', target='_blank') NewsIT-M.W.Steidl
