--- a/views/pmdresult_stds.pug
+++ b/views/pmdresult_stds.pug
@@ -21,78 +21,80 @@ block content
             - var ilfncompare = '/getpmd/html/compare/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
             div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px;margin-left: 10px;"><a href="#{ilfntopics}">See grouped by metadata topics</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfncompare}">See compared fields</a></span>
 
-        h2 IIM - IPTC Photo Metadata Fields
-        table(class='pmd1 table-bordered table-striped table-curved')
-            thead
-                tr
-                    th Field Name
-                    th Field Value
-            tbody
-                each iimprop in iimOutObj
+        div(class="resultdata1")
+
+            h2 IIM - IPTC Photo Metadata Fields
+            table(class='pmd1 table-bordered table-striped table-curved')
+                thead
                     tr
-                        td=iimprop.pname
-                        td=iimprop.pvalue
+                        th Field Name
+                        th Field Value
+                tbody
+                    each iimprop in iimOutObj
+                        tr
+                            td=iimprop.pname
+                            td=iimprop.pvalue
 
-        h2 XMP - IPTC Photo Metadata Fields
-        table(class='pmd1 table-bordered table-striped table-curved')
-            thead
-                tr
-                    th Field Name
-                    th Field Value
-            tbody
-                each rowL1 in xmpOutObj
+            h2 XMP - IPTC Photo Metadata Fields
+            table(class='pmd1 table-bordered table-striped table-curved')
+                thead
                     tr
-                        - var singlevalueL1 = rowL1.ptype == "plain";
-                        td=rowL1.pname
-                        if singlevalueL1
-                            td=rowL1.pvalue
-                        else
-                            - var rowsL2 = rowL1.pvalue
-                            td: table(class='pmd1 table-bordered table-striped')
-                                tbody
-                                    each rowL2 in rowsL2
-                                        - var singlevalueL2 = rowL2.ptype == "plain";
-                                        tr
-                                            td=rowL2.pname
-                                            if singlevalueL2
-                                                td=rowL2.pvalue
-                                            else
-                                                - var rowsL3 = rowL2.pvalue;
-                                                td: table(class='pmd1 table-bordered table-striped')
-                                                    tbody
-                                                        each rowL3 in rowsL3
-                                                            tr
-                                                                td=rowL3.pname
-                                                                td=rowL3.pvalue
+                        th Field Name
+                        th Field Value
+                tbody
+                    each rowL1 in xmpOutObj
+                        tr
+                            - var singlevalueL1 = rowL1.ptype == "plain";
+                            td=rowL1.pname
+                            if singlevalueL1
+                                td=rowL1.pvalue
+                            else
+                                - var rowsL2 = rowL1.pvalue
+                                td: table(class='pmd1 table-bordered table-striped')
+                                    tbody
+                                        each rowL2 in rowsL2
+                                            - var singlevalueL2 = rowL2.ptype == "plain";
+                                            tr
+                                                td=rowL2.pname
+                                                if singlevalueL2
+                                                    td=rowL2.pvalue
+                                                else
+                                                    - var rowsL3 = rowL2.pvalue;
+                                                    td: table(class='pmd1 table-bordered table-striped')
+                                                        tbody
+                                                            each rowL3 in rowsL3
+                                                                tr
+                                                                    td=rowL3.pname
+                                                                    td=rowL3.pvalue
 
-        h2 Exif - Fields related to IPTC Photo Metadata
-        table(class='pmd1 table-bordered table-striped table-curved')
-            thead
-                tr
-                    th Field Name
-                    th Field Value
-            tbody
-                each exifprop in exifOutObj
+            h2 Exif - Fields related to IPTC Photo Metadata
+            table(class='pmd1 table-bordered table-striped table-curved')
+                thead
                     tr
-                        td=exifprop.pname
-                        td=exifprop.pvalue
+                        th Field Name
+                        th Field Value
+                tbody
+                    each exifprop in exifOutObj
+                        tr
+                            td=exifprop.pname
+                            td=exifprop.pvalue
 
-        h2 Any other data
-        table(class='pmd1 table-bordered table-striped table-curved')
-            thead
-                tr
-                    th Field Name
-                    th Field Value
-            tbody
-                each anyprop in anyOutObjStd
+            h2 Any other data
+            table(class='pmd1 table-bordered table-striped table-curved')
+                thead
                     tr
-                        td=anyprop.pname
-                        td=anyprop.pvalue
+                        th Field Name
+                        th Field Value
+                tbody
+                    each anyprop in anyOutObjStd
+                        tr
+                            td=anyprop.pname
+                            td=anyprop.pvalue
 
 
-        div(class="row topspace2")
-            - var ilfntopics = '/getpmd/html/topics/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
-            - var ilfncompare = '/getpmd/html/compare/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
-            div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px;margin-left: 10px;"><a href="#{ilfntopics}">See grouped by metadata topics</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfncompare}">See compared fields</a></span>
+            div(class="row topspace2")
+                - var ilfntopics = '/getpmd/html/topics/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
+                - var ilfncompare = '/getpmd/html/compare/'+ labeltype + '/?imglfn=' + imglfn + '||' + imageTitle;
+                div(class="col-md-8") <span style="border: 1px black solid; background-color: #ccffe6; padding:3px;"><a href="/">Back to Request Form</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px;margin-left: 10px;"><a href="#{ilfntopics}">See grouped by metadata topics</a></span> <span style="border: 1px black solid; background-color: #ffe6cc; padding:3px; margin-left: 5px;"><a href="#{ilfncompare}">See compared fields</a></span>
 
 
